--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -942,6 +942,10 @@ a,
   right: -0.75rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .bottom-10 {
   bottom: 2.5rem;
 }
@@ -950,12 +954,20 @@ a,
   right: 0px;
 }
 
+.right-\[10px\] {
+  right: 10px;
+}
+
 .right-\[15\%\] {
   right: 15%;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.top-\[10px\] {
+  top: 10px;
 }
 
 .top-\[15\%\] {
@@ -1039,6 +1051,10 @@ a,
   margin-bottom: 1.5rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -1069,6 +1085,10 @@ a,
 
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
 }
 
 .mb-\[14px\] {
@@ -1107,12 +1127,8 @@ a,
   margin-top: 1.25rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-\[10px\] {
-  margin-bottom: 10px;
+.mt-\[18px\] {
+  margin-top: 18px;
 }
 
 .block {
@@ -1195,8 +1211,16 @@ a,
   height: 123px;
 }
 
+.h-\[18px\] {
+  height: 18px;
+}
+
 .h-\[21px\] {
   height: 21px;
+}
+
+.h-\[32px\] {
+  height: 32px;
 }
 
 .h-\[45\%\] {
@@ -1215,6 +1239,10 @@ a,
   height: 65px;
 }
 
+.h-\[66px\] {
+  height: 66px;
+}
+
 .h-\[auto\] {
   height: auto;
 }
@@ -1225,10 +1253,6 @@ a,
 
 .h-full {
   height: 100%;
-}
-
-.h-\[18px\] {
-  height: 18px;
 }
 
 .w-20 {
@@ -1247,6 +1271,10 @@ a,
   width: 123px;
 }
 
+.w-\[18px\] {
+  width: 18px;
+}
+
 .w-\[1px\] {
   width: 1px;
 }
@@ -1257,6 +1285,10 @@ a,
 
 .w-\[21px\] {
   width: 21px;
+}
+
+.w-\[26px\] {
+  width: 26px;
 }
 
 .w-\[45\%\] {
@@ -1275,6 +1307,10 @@ a,
   width: 65px;
 }
 
+.w-\[66px\] {
+  width: 66px;
+}
+
 .w-\[82\.5px\] {
   width: 82.5px;
 }
@@ -1289,10 +1325,6 @@ a,
 
 .w-full {
   width: 100%;
-}
-
-.w-\[18px\] {
-  width: 18px;
 }
 
 .min-w-\[45px\] {
@@ -1314,6 +1346,10 @@ a,
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .resize {
   resize: both;
 }
@@ -1332,10 +1368,6 @@ a,
 
 .items-start {
   align-items: flex-start;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -1386,12 +1418,20 @@ a,
   gap: 10px;
 }
 
+.gap-\[27px\] {
+  gap: 27px;
+}
+
 .gap-\[45px\] {
   gap: 45px;
 }
 
 .gap-\[50px\] {
   gap: 50px;
+}
+
+.gap-\[7px\] {
+  gap: 7px;
 }
 
 .overflow-hidden {
@@ -1452,6 +1492,10 @@ a,
 
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
 }
 
 .border-\[\#E8E8E8\] {
@@ -1571,9 +1615,9 @@ a,
   padding-right: 2rem;
 }
 
-.px-\[130px\] {
-  padding-left: 130px;
-  padding-right: 130px;
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .px-\[29px\] {
@@ -1616,6 +1660,16 @@ a,
   padding-bottom: 1.75rem;
 }
 
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.py-\[18px\] {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
 .py-\[19px\] {
   padding-top: 19px;
   padding-bottom: 19px;
@@ -1631,6 +1685,10 @@ a,
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-\[120px\] {
+  padding-bottom: 120px;
 }
 
 .pb-\[141px\] {
@@ -1649,6 +1707,10 @@ a,
   padding-bottom: 90px;
 }
 
+.pe-\[50px\] {
+  padding-inline-end: 50px;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -1665,6 +1727,10 @@ a,
   padding-right: 2px;
 }
 
+.ps-5 {
+  padding-inline-start: 1.25rem;
+}
+
 .pt-10 {
   padding-top: 2.5rem;
 }
@@ -1677,6 +1743,14 @@ a,
   padding-top: 131px;
 }
 
+.pt-\[152px\] {
+  padding-top: 152px;
+}
+
+.pt-\[18px\] {
+  padding-top: 18px;
+}
+
 .pt-\[2px\] {
   padding-top: 2px;
 }
@@ -1687,14 +1761,6 @@ a,
 
 .pt-\[60px\] {
   padding-top: 60px;
-}
-
-.pe-\[50px\] {
-  padding-inline-end: 50px;
-}
-
-.ps-5 {
-  padding-inline-start: 1.25rem;
 }
 
 .text-center {
@@ -1858,6 +1924,14 @@ a,
 
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .transition-all {
@@ -2111,6 +2185,21 @@ a,
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+ul .slick-active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 187 36 / var(--tw-bg-opacity));
+}
+
+.sliderControls .slick-dots {
+  margin-top: 58px;
+  justify-content: center;
+}
+
+.slick-slide {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .gradientBg
 {
   background-image: url(../images/gradientBg.svg);
@@ -2140,6 +2229,10 @@ a,
 .hover\:text-mango:hover {
   --tw-text-opacity: 1;
   color: rgb(254 187 36 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:flex {
+  display: flex;
 }
 
 .group\/study:hover .group-hover\/study\:h-10 {
@@ -2219,4 +2312,38 @@ a,
 
 .hover\:\[\&\>svg\]\:fill-mango>svg:hover {
   fill: #FEBB24;
+}
+
+.\[\&\>ul\>li\]\:h-4>ul>li {
+  height: 1rem;
+}
+
+.\[\&\>ul\>li\]\:w-4>ul>li {
+  width: 1rem;
+}
+
+.\[\&\>ul\>li\]\:rounded-xl>ul>li {
+  border-radius: 0.75rem;
+}
+
+.\[\&\>ul\>li\]\:bg-white>ul>li {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.\[\&\>ul\>li\]\:text-\[0\]>ul>li {
+  font-size: 0;
+}
+
+.\[\&\>ul\>li\]\:hover\:bg-mango:hover>ul>li {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 187 36 / var(--tw-bg-opacity));
+}
+
+.\[\&\>ul\]\:flex>ul {
+  display: flex;
+}
+
+.\[\&\>ul\]\:gap-\[5px\]>ul {
+  gap: 5px;
 }
