--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -2163,7 +2163,7 @@ a,
   background-image: url(../images/white-check.svg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size:12px;
+  background-size: 12px;
 }
 
 .dropperWrapper .drop-list input {
@@ -2206,8 +2206,8 @@ a,
 }
 
 .slick-active button {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 187 36 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(254 187 36 / var(--tw-bg-opacity)) !important;
 }
 
 .meetControls .slick-dots {
@@ -2225,21 +2225,20 @@ a,
   margin-right: 10px;
 }
 
-.gradientBg
-{
+.gradientBg {
   background-image: url(../images/gradientBg.svg);
 }
 
-.videoBg{
+.videoBg {
   background-image: url(../images/videoBanner.png);
 }
 
-.getstartedBanner{
-  background-image:url(../images/getstartedbanner.svg);
+.getstartedBanner {
+  background-image: url(../images/getstartedbanner.svg);
 }
 
-.getstartedBanner2{
-  background-image:url(../images/getstartedbanner2.svg);
+.getstartedBanner2 {
+  background-image: url(../images/getstartedbanner2.svg);
 }
 
 .hover\:-top-2:hover {
@@ -2339,6 +2338,11 @@ a,
   fill: #FEBB24;
 }
 
+.\[\&\>ul\>li\>button\:hover\]\:bg-mango>ul>li>button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 187 36 / var(--tw-bg-opacity));
+}
+
 .\[\&\>ul\>li\>button\]\:h-4>ul>li>button {
   height: 1rem;
 }
@@ -2354,11 +2358,6 @@ a,
 .\[\&\>ul\>li\>button\]\:bg-white>ul>li>button {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.\[\&\>ul\>li\>button\]\:hover\:bg-mango:hover>ul>li>button {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 187 36 / var(--tw-bg-opacity));
 }
 
 .\[\&\>ul\>li\]\:text-\[0\]>ul>li {
