--- a/src/input/tailwind.css
+++ b/src/input/tailwind.css
@@ -184,60 +184,52 @@
 .dropperWrapper .drop-list label {
   @apply relative pl-[30px] text-black flex text-[17px] family-normal leading-[18px] cursor-pointer m-0 px-0 top-px hover:text-zero before:absolute;
 }
-.dropperWrapper .drop-list label::before 
-{
+.dropperWrapper .drop-list label::before {
   @apply h-[18px] w-[18px] cursor-pointer rounded-[3px] border border-black left-0;
 }
-.dropperWrapper .drop-list input:checked ~ label
-{
-  @apply text-zero family-medium
+.dropperWrapper .drop-list input:checked ~ label {
+  @apply text-zero family-medium;
 }
-.dropperWrapper .drop-list input:checked ~ label::before
-{
+.dropperWrapper .drop-list input:checked ~ label::before {
   @apply bg-zero bg-[url(../images/white-check.svg)] border-zero bg-center bg-no-repeat top-1/2 -translate-y-1/2;
-  background-size:12px;
-} 
+  background-size: 12px;
+}
 .dropperWrapper .drop-list input {
   @apply hidden;
 }
 /* ! Multi Check Drop Down END*/
 
 /* * Tabs */
-.tabs
-{
-  @apply rounded-[50px] bg-white flex items-center p-2.5
+.tabs {
+  @apply rounded-[50px] bg-white flex items-center p-2.5;
 }
-.tabs .tab-link
-{
-  @apply h-[60px] grow text-xl px-5 rounded-[40px] bg-transparent text-black font-normal
+.tabs .tab-link {
+  @apply h-[60px] grow text-xl px-5 rounded-[40px] bg-transparent text-black font-normal;
 }
-.tabs .tab-link.active 
-{
-  @apply bg-zero text-white font-bold
+.tabs .tab-link.active {
+  @apply bg-zero text-white font-bold;
 }
-.slick-active button
-{
-  @apply bg-mango
+.slick-active button {
+  @apply !bg-mango;
 }
 .meetControls .slick-dots {
- @apply justify-center mt-[58px]
+  @apply justify-center mt-[58px];
 }
 .studentControls .slick-dots {
-  @apply justify-center mt-[58px]
- }
-.slick-slide {
-@apply mx-[10px]
+  @apply justify-center mt-[58px];
 }
-.gradientBg
-{
+.slick-slide {
+  @apply mx-[10px];
+}
+.gradientBg {
   background-image: url(../images/gradientBg.svg);
 }
-.videoBg{
+.videoBg {
   background-image: url(../images/videoBanner.png);
 }
-.getstartedBanner{
-  background-image:url(../images/getstartedbanner.svg);
+.getstartedBanner {
+  background-image: url(../images/getstartedbanner.svg);
 }
-.getstartedBanner2{
-  background-image:url(../images/getstartedbanner2.svg);
+.getstartedBanner2 {
+  background-image: url(../images/getstartedbanner2.svg);
 }
