--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1087,6 +1087,10 @@ a,
   margin-bottom: 2rem;
 }
 
+.mb-\[10\] {
+  margin-bottom: 10;
+}
+
 .mb-\[10px\] {
   margin-bottom: 10px;
 }
@@ -1135,8 +1139,12 @@ a,
   margin-top: 18px;
 }
 
-.mb-\[10\] {
-  margin-bottom: 10;
+.ms-\[10px\] {
+  margin-inline-start: 10px;
+}
+
+.mb-\[12px\] {
+  margin-bottom: 12px;
 }
 
 .block {
@@ -1227,6 +1235,10 @@ a,
   height: 21px;
 }
 
+.h-\[30px\] {
+  height: 30px;
+}
+
 .h-\[32px\] {
   height: 32px;
 }
@@ -1267,8 +1279,20 @@ a,
   height: 100%;
 }
 
-.h-\[30px\] {
-  height: 30px;
+.h-\[\] {
+  height: ;
+}
+
+.h-\[24px\] {
+  height: 24px;
+}
+
+.h-\[16px\] {
+  height: 16px;
+}
+
+.h-\[230px\] {
+  height: 230px;
 }
 
 .w-20 {
@@ -1305,6 +1329,10 @@ a,
 
 .w-\[26px\] {
   width: 26px;
+}
+
+.w-\[30px\] {
+  width: 30px;
 }
 
 .w-\[45\%\] {
@@ -1347,36 +1375,36 @@ a,
   width: 100%;
 }
 
-.w-\[500px\] {
-  width: 500px;
+.w-\[141px\] {
+  width: 141px;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.w-\[16px\] {
+  width: 16px;
 }
 
-.w-\[1000px\] {
-  width: 1000px;
+.w-\[22px\] {
+  width: 22px;
 }
 
-.w-\[30px\] {
-  width: 30px;
+.w-\[230px\] {
+  width: 230px;
+}
+
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .min-w-\[45px\] {
   min-width: 45px;
 }
 
-.max-w-\[500px\] {
-  max-width: 500px;
-}
-
-.max-w-lg {
-  max-width: 32rem;
-}
-
 .max-w-\[780px\] {
   max-width: 780px;
+}
+
+.max-w-\[298px\] {
+  max-width: 298px;
 }
 
 .grow {
@@ -1424,6 +1452,10 @@ a,
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
@@ -1486,8 +1518,28 @@ a,
   gap: 7px;
 }
 
+.gap-\[23px\] {
+  gap: 23px;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 
 .rounded-3xl {
@@ -1583,16 +1635,6 @@ a,
   border-color: rgb(110 129 182 / var(--tw-border-opacity));
 }
 
-.border-b-white {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-b-indigo {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(110 129 182 / var(--tw-border-opacity));
-}
-
 .bg-\[\#2B2E47\] {
   --tw-bg-opacity: 1;
   background-color: rgb(43 46 71 / var(--tw-bg-opacity));
@@ -1642,6 +1684,11 @@ a,
   background-color: rgb(0 63 188 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#333753\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 55 83 / var(--tw-bg-opacity));
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1678,6 +1725,10 @@ a,
 
 .p-\[60px\] {
   padding: 60px;
+}
+
+.p-\[10px\] {
+  padding: 10px;
 }
 
 .px-0 {
@@ -1878,12 +1929,24 @@ a,
   padding-top: 60px;
 }
 
+.pt-\[71px\] {
+  padding-top: 71px;
+}
+
 .pt-\[83px\] {
   padding-top: 83px;
 }
 
 .pt-\[90px\] {
   padding-top: 90px;
+}
+
+.pb-\[30px\] {
+  padding-bottom: 30px;
+}
+
+.pt-\[28px\] {
+  padding-top: 28px;
 }
 
 .text-center {
@@ -1983,6 +2046,11 @@ a,
 .text-zero {
   --tw-text-opacity: 1;
   color: rgb(0 63 188 / var(--tw-text-opacity));
+}
+
+.text-mango {
+  --tw-text-opacity: 1;
+  color: rgb(254 187 36 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -2349,7 +2417,7 @@ a,
 }
 
 .getstartedBanner2 {
-  background-image: url(../images/getstartedbanner2.svg);
+  background-image:url(../images/getstartedbanner2.svg);
 }
 
 .getstartedBanner3{
