--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -950,6 +950,14 @@ a,
   bottom: 2.5rem;
 }
 
+.bottom-\[-50px\] {
+  bottom: -50px;
+}
+
+.left-\[-100px\] {
+  left: -100px;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -1095,8 +1103,16 @@ a,
   margin-bottom: 10px;
 }
 
+.mb-\[12px\] {
+  margin-bottom: 12px;
+}
+
 .mb-\[14px\] {
   margin-bottom: 14px;
+}
+
+.mb-\[29px\] {
+  margin-bottom: 29px;
 }
 
 .mb-\[30px\] {
@@ -1111,6 +1127,10 @@ a,
   margin-bottom: 62px;
 }
 
+.me-5 {
+  margin-inline-end: 1.25rem;
+}
+
 .ml-12 {
   margin-left: 3rem;
 }
@@ -1121,6 +1141,14 @@ a,
 
 .ms-2 {
   margin-inline-start: 0.5rem;
+}
+
+.ms-\[10px\] {
+  margin-inline-start: 10px;
+}
+
+.ms-\[120px\] {
+  margin-inline-start: 120px;
 }
 
 .mt-12 {
@@ -1139,12 +1167,8 @@ a,
   margin-top: 18px;
 }
 
-.ms-\[10px\] {
-  margin-inline-start: 10px;
-}
-
-.mb-\[12px\] {
-  margin-bottom: 12px;
+.mb-\[123px\] {
+  margin-bottom: 123px;
 }
 
 .block {
@@ -1215,6 +1239,10 @@ a,
   height: 6rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -1227,12 +1255,20 @@ a,
   height: 123px;
 }
 
+.h-\[16px\] {
+  height: 16px;
+}
+
 .h-\[18px\] {
   height: 18px;
 }
 
 .h-\[21px\] {
   height: 21px;
+}
+
+.h-\[24px\] {
+  height: 24px;
 }
 
 .h-\[30px\] {
@@ -1279,20 +1315,24 @@ a,
   height: 100%;
 }
 
-.h-\[\] {
-  height: ;
+.h-\[350px\] {
+  height: 350px;
 }
 
-.h-\[24px\] {
-  height: 24px;
+.h-\[398px\] {
+  height: 398px;
 }
 
-.h-\[16px\] {
-  height: 16px;
+.h-\[340px\] {
+  height: 340px;
 }
 
-.h-\[230px\] {
-  height: 230px;
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[410px\] {
+  height: 410px;
 }
 
 .w-20 {
@@ -1307,8 +1347,20 @@ a,
   width: 0.75rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-\[123px\] {
   width: 123px;
+}
+
+.w-\[141px\] {
+  width: 141px;
+}
+
+.w-\[16px\] {
+  width: 16px;
 }
 
 .w-\[18px\] {
@@ -1325,6 +1377,10 @@ a,
 
 .w-\[21px\] {
   width: 21px;
+}
+
+.w-\[22px\] {
+  width: 22px;
 }
 
 .w-\[26px\] {
@@ -1375,36 +1431,28 @@ a,
   width: 100%;
 }
 
-.w-\[141px\] {
-  width: 141px;
-}
-
-.w-\[16px\] {
-  width: 16px;
-}
-
-.w-\[22px\] {
-  width: 22px;
-}
-
-.w-\[230px\] {
-  width: 230px;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
 .min-w-\[45px\] {
   min-width: 45px;
 }
 
-.max-w-\[780px\] {
-  max-width: 780px;
-}
-
 .max-w-\[298px\] {
   max-width: 298px;
+}
+
+.max-w-\[396px\] {
+  max-width: 396px;
+}
+
+.max-w-\[462px\] {
+  max-width: 462px;
+}
+
+.max-w-\[710px\] {
+  max-width: 710px;
+}
+
+.max-w-\[780px\] {
+  max-width: 780px;
 }
 
 .grow {
@@ -1502,6 +1550,18 @@ a,
   gap: 10px;
 }
 
+.gap-\[17px\] {
+  gap: 17px;
+}
+
+.gap-\[18px\] {
+  gap: 18px;
+}
+
+.gap-\[23px\] {
+  gap: 23px;
+}
+
 .gap-\[27px\] {
   gap: 27px;
 }
@@ -1518,28 +1578,12 @@ a,
   gap: 7px;
 }
 
-.gap-\[23px\] {
-  gap: 23px;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
-.overflow-x-auto {
-  overflow-x: auto;
-}
-
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
-.overflow-x-scroll {
-  overflow-x: scroll;
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 .rounded-3xl {
@@ -1620,6 +1664,11 @@ a,
   border-color: rgb(238 238 238 / var(--tw-border-opacity));
 }
 
+.border-indigo {
+  --tw-border-opacity: 1;
+  border-color: rgb(110 129 182 / var(--tw-border-opacity));
+}
+
 .border-mango {
   --tw-border-opacity: 1;
   border-color: rgb(254 187 36 / var(--tw-border-opacity));
@@ -1630,19 +1679,24 @@ a,
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-indigo {
-  --tw-border-opacity: 1;
-  border-color: rgb(110 129 182 / var(--tw-border-opacity));
-}
-
 .bg-\[\#2B2E47\] {
   --tw-bg-opacity: 1;
   background-color: rgb(43 46 71 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#333753\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 55 83 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#E6CCC0\] {
   --tw-bg-opacity: 1;
   background-color: rgb(230 204 192 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FFF5E0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 245 224 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#FFF8F4\] {
@@ -1684,11 +1738,6 @@ a,
   background-color: rgb(0 63 188 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#333753\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 55 83 / var(--tw-bg-opacity));
-}
-
 .bg-cover {
   background-size: cover;
 }
@@ -1723,12 +1772,12 @@ a,
   padding: 1.25rem;
 }
 
-.p-\[60px\] {
-  padding: 60px;
-}
-
 .p-\[10px\] {
   padding: 10px;
+}
+
+.p-\[60px\] {
+  padding: 60px;
 }
 
 .px-0 {
@@ -1759,6 +1808,11 @@ a,
 .px-\[10px\] {
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.px-\[14px\] {
+  padding-left: 14px;
+  padding-right: 14px;
 }
 
 .px-\[29px\] {
@@ -1806,6 +1860,11 @@ a,
   padding-bottom: 10px;
 }
 
+.py-\[12px\] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
 .py-\[18px\] {
   padding-top: 18px;
   padding-bottom: 18px;
@@ -1819,6 +1878,11 @@ a,
 .py-\[4px\] {
   padding-top: 4px;
   padding-bottom: 4px;
+}
+
+.py-\[9px\] {
+  padding-top: 9px;
+  padding-bottom: 9px;
 }
 
 .pb-32 {
@@ -1839,6 +1903,10 @@ a,
 
 .pb-\[141px\] {
   padding-bottom: 141px;
+}
+
+.pb-\[30px\] {
+  padding-bottom: 30px;
 }
 
 .pb-\[50px\] {
@@ -1865,6 +1933,10 @@ a,
   padding-inline-end: 50px;
 }
 
+.pe-\[9px\] {
+  padding-inline-end: 9px;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -1883,6 +1955,10 @@ a,
 
 .ps-5 {
   padding-inline-start: 1.25rem;
+}
+
+.ps-\[20px\] {
+  padding-inline-start: 20px;
 }
 
 .ps-\[30px\] {
@@ -1913,6 +1989,10 @@ a,
   padding-top: 20px;
 }
 
+.pt-\[28px\] {
+  padding-top: 28px;
+}
+
 .pt-\[2px\] {
   padding-top: 2px;
 }
@@ -1929,6 +2009,10 @@ a,
   padding-top: 60px;
 }
 
+.pt-\[65px\] {
+  padding-top: 65px;
+}
+
 .pt-\[71px\] {
   padding-top: 71px;
 }
@@ -1939,14 +2023,6 @@ a,
 
 .pt-\[90px\] {
   padding-top: 90px;
-}
-
-.pb-\[30px\] {
-  padding-bottom: 30px;
-}
-
-.pt-\[28px\] {
-  padding-top: 28px;
 }
 
 .text-center {
@@ -2001,6 +2077,11 @@ a,
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -2033,6 +2114,11 @@ a,
   color: rgb(110 129 182 / var(--tw-text-opacity));
 }
 
+.text-mango {
+  --tw-text-opacity: 1;
+  color: rgb(254 187 36 / var(--tw-text-opacity));
+}
+
 .text-night {
   --tw-text-opacity: 1;
   color: rgb(2 8 66 / var(--tw-text-opacity));
@@ -2046,11 +2132,6 @@ a,
 .text-zero {
   --tw-text-opacity: 1;
   color: rgb(0 63 188 / var(--tw-text-opacity));
-}
-
-.text-mango {
-  --tw-text-opacity: 1;
-  color: rgb(254 187 36 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -2148,6 +2229,24 @@ a,
 }
 
 /* Scroll Bar */
+
+.y-scroll::-webkit-scrollbar {
+  width: 7px;
+  background-color: transparent;
+}
+
+.y-scroll::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #0b8140 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(11 129 64 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #0a5229 var(--tw-gradient-to-position);
+}
+
+.y-scroll::-webkit-scrollbar-track {
+  background-color: transparent;
+}
 
 .family-thin {
   font-family: "tommyThin";
