--- a/src/input/tailwind.css
+++ b/src/input/tailwind.css
@@ -241,3 +241,6 @@
 .getstartedBanner2{
   background-image:url(../images/getstartedbanner2.svg);
 }
+.getstartedBanner3{
+  background-image:url(../images/help.svg);
+}
